--- a/themes/base_files/scss/_tiki-variables.scss
+++ b/themes/base_files/scss/_tiki-variables.scss
@@ -142,3 +142,8 @@ header.navbar.fixed-top {
     --tiki-fixed-top-border-left-width: 0px;
 //    --tiki-topbar-light-border-color: #000;
 }
+
+:root {
+    --tiki-tooltip-link-color: #88b6fc; // Default link color lightened for readability on #000 background; more elaborate method coming for Bootstrap 5.3. - g_c-l
+    --tiki-tooltip-link-hover-color: $tooltip-color;
+}
