--- a/themes/feb12/css/feb12.css
+++ b/themes/feb12/css/feb12.css
@@ -25,6 +25,10 @@ header.navbar.fixed-top {
   --tiki-fixed-top-border-left-width: 0px;
 }
 :root {
+  --tiki-tooltip-link-color: #88b6fc;
+  --tiki-tooltip-link-hover-color: $tooltip-color;
+}
+:root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
   --bs-purple: #6f42c1;
@@ -11516,15 +11520,15 @@ body.wikitext {
 .wp-cookie-consent-required {
   color: #d9534f;
 }
-.wp-sign {
+.tooltip-inner {
   color: #fff;
   background-color: #000;
 }
-.wp-sign a, .wp-sign a:visited {
-  color: white;
+.tooltip-inner a, .tooltip-inner a:visited {
+  color: var(--tiki-tooltip-link-color);
 }
-.wp-sign a:hover, .wp-sign a:visited:hover {
-  color: white;
+.tooltip-inner a:hover, .tooltip-inner a:visited:hover {
+  color: var(--tiki-tooltip-link-hover-color);
   text-decoration: none;
 }
 .toc {
@@ -11541,11 +11545,13 @@ body.wikitext {
   background: #5cb85c;
   --bs-table-bg: #5cb85c;
   color: white;
+  word-break: break-all;
 }
 .diffdeleted {
   background: #d9534f;
   --bs-table-bg: #d9534f;
   color: white;
+  word-break: break-all;
 }
 .diffadded a, .diffadded a:hover {
   color: white;
